--- a/blog.css
+++ b/blog.css
@@ -22,11 +22,11 @@ div#hero {
 }
 
 .main-body {
-    border: 20px solid #bdc;
-    border-radius: 10px;
-    padding: 20px;
+    border: 0.7rem solid #dc3545;
+    border-radius: 6px;
+    padding: 0.8rem;
     max-width: 700px;
-    width: 80%;
+    width: 95%;
     margin: 20px auto;
     font-family: Helvetica, 'Lucida Sans',sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -39,7 +39,7 @@ div#hero {
 }
 
 .quote {
-    border-left: 5px solid #bdc;
+    border-left: 5px solid #dc3545;
     padding-left: 5px;
 }
 
@@ -62,7 +62,7 @@ hr {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-a {
-    text-decoration: none;
-    color: dodgerblue;
+a.link {
+    text-decoration: none !important;
+    color: #dc3545 !important;
 }
